Add Estado del arte
Signed-off-by: Ariel D'Alessandro <ariel@vanguardiasur.com.ar>

--- a/all.bib
+++ b/all.bib
@@ -1110,3 +1110,307 @@ month={Sept},}
   year={2008},
   publisher={IEEE}
 }
+
+@inproceedings{kleeman2003advanced,
+  title={Advanced sonar and odometry error modeling for simultaneous localisation and map building},
+  author={Kleeman, Lindsay},
+  booktitle={Intelligent Robots and Systems, 2003.(IROS 2003). Proceedings. 2003 IEEE/RSJ International Conference on},
+  volume={1},
+  pages={699--704},
+  year={2003},
+  organization={IEEE}
+}
+
+@inproceedings{abrate2007experimental,
+  title={Experimental EKF-based SLAM for Mini-rovers with IR Sensors Only.},
+  author={Abrate, Fabrizio and Bona, Basilio and Indri, Marina},
+  booktitle={EMCR},
+  year={2007}
+}
+
+@inproceedings{cole2006using,
+  title={Using laser range data for 3D SLAM in outdoor environments},
+  author={Cole, David M and Newman, Paul M},
+  booktitle={Robotics and Automation, 2006. ICRA 2006. Proceedings 2006 IEEE International Conference on},
+  pages={1556--1563},
+  year={2006},
+  organization={IEEE}
+}
+
+@book{trucco1998introductory,
+  title={Introductory techniques for 3-D computer vision},
+  author={Trucco, Emanuele and Verri, Alessandro},
+  volume={201},
+  year={1998},
+  publisher={Prentice Hall Englewood Cliffs}
+}
+
+@book{ma2012invitation,
+  title={An invitation to 3-d vision: from images to geometric models},
+  author={Ma, Yi and Soatto, Stefano and Kosecka, Jana and Sastry, S Shankar},
+  volume={26},
+  year={2012},
+  publisher={Springer Science \& Business Media}
+}
+
+@inproceedings{li2009robust,
+  title={Robust single-view geometry and motion reconstruction},
+  author={Li, Hao and Adams, Bart and Guibas, Leonidas J and Pauly, Mark},
+  booktitle={ACM Transactions on Graphics (TOG)},
+  volume={28},
+  number={5},
+  pages={175},
+  year={2009},
+  organization={ACM}
+}
+
+@article{zhang2000flexible,
+  title={A flexible new technique for camera calibration},
+  author={Zhang, Zhengyou},
+  journal={IEEE Transactions on pattern analysis and machine intelligence},
+  volume={22},
+  number={11},
+  pages={1330--1334},
+  year={2000},
+  publisher={IEEE}
+}
+
+@inproceedings{beardsley19963d,
+  title={3D model acquisition from extended image sequences},
+  author={Beardsley, Paul and Torr, Phil and Zisserman, Andrew},
+  booktitle={European conference on computer vision},
+  pages={683--695},
+  year={1996},
+  organization={Springer}
+}
+
+@inproceedings{fitzgibbon1998automatic,
+  title={Automatic camera recovery for closed or open image sequences},
+  author={Fitzgibbon, Andrew W and Zisserman, Andrew},
+  booktitle={European conference on computer vision},
+  pages={311--326},
+  year={1998},
+  organization={Springer}
+}
+
+@article{pollefeys1999self,
+  title={Self-calibration and metric reconstruction inspite of varying and unknown intrinsic camera parameters},
+  author={Pollefeys, Marc and Koch, Reinhard and Van Gool, Luc},
+  journal={International Journal of Computer Vision},
+  volume={32},
+  number={1},
+  pages={7--25},
+  year={1999},
+  publisher={Springer}
+}
+
+@inproceedings{devernay1995automatic,
+  title={Automatic calibration and removal of distortion from scenes of structured environments},
+  author={Devernay, Fr{\'e}d{\'e}ric and Faugeras, Olivier D},
+  booktitle={SPIE's 1995 International Symposium on Optical Science, Engineering, and Instrumentation},
+  pages={62--72},
+  year={1995},
+  organization={International Society for Optics and Photonics}
+}
+
+@article{cornelis20083d,
+  title={3d urban scene modeling integrating recognition and reconstruction},
+  author={Cornelis, Nico and Leibe, Bastian and Cornelis, Kurt and Van Gool, Luc},
+  journal={International Journal of Computer Vision},
+  volume={78},
+  number={2-3},
+  pages={121--141},
+  year={2008},
+  publisher={Springer}
+}
+
+@article{pollefeys2008detailed,
+  title={Detailed real-time urban 3d reconstruction from video},
+  author={Pollefeys, Marc and Nist{\'e}r, David and Frahm, J-M and Akbarzadeh, Amir and Mordohai, Philippos and Clipp, Brian and Engels, Chris and Gallup, David and Kim, S-J and Merrell, Paul and others},
+  journal={International Journal of Computer Vision},
+  volume={78},
+  number={2-3},
+  pages={143--167},
+  year={2008},
+  publisher={Springer}
+}
+
+@inproceedings{engel2014lsd,
+  title={LSD-SLAM: Large-scale direct monocular SLAM},
+  author={Engel, Jakob and Sch{\"o}ps, Thomas and Cremers, Daniel},
+  booktitle={European Conference on Computer Vision},
+  pages={834--849},
+  year={2014},
+  organization={Springer}
+}
+
+@inproceedings{engel2015large,
+  title={Large-scale direct SLAM with stereo cameras},
+  author={Engel, Jakob and St{\"u}ckler, J{\"o}rg and Cremers, Daniel},
+  booktitle={Intelligent Robots and Systems (IROS), 2015 IEEE/RSJ International Conference on},
+  pages={1935--1942},
+  year={2015},
+  organization={IEEE}
+}
+
+@inproceedings{caruso2015large,
+  title={Large-scale direct slam for omnidirectional cameras},
+  author={Caruso, David and Engel, Jakob and Cremers, Daniel},
+  booktitle={Intelligent Robots and Systems (IROS), 2015 IEEE/RSJ International Conference on},
+  pages={141--148},
+  year={2015},
+  organization={IEEE}
+}
+
+@inproceedings{concha2016visual,
+  title={Visual-inertial direct SLAM},
+  author={Concha, Alejo and Loianno, Giuseppe and Kumar, Vijay and Civera, Javier},
+  booktitle={Robotics and Automation (ICRA), 2016 IEEE International Conference on},
+  pages={1331--1338},
+  year={2016},
+  organization={IEEE}
+}
+
+@inproceedings{mur2015probabilistic,
+  title={Probabilistic Semi-Dense Mapping from Highly Accurate Feature-Based Monocular SLAM.},
+  author={Mur-Artal, Raul and Tard{\'o}s, Juan D},
+  booktitle={Robotics: Science and Systems},
+  year={2015}
+}
+
+@inproceedings{stuhmer2010real,
+  title={Real-time dense geometry from a handheld camera},
+  author={St{\"u}hmer, Jan and Gumhold, Stefan and Cremers, Daniel},
+  booktitle={Joint Pattern Recognition Symposium},
+  pages={11--20},
+  year={2010},
+  organization={Springer}
+}
+
+@inproceedings{graber2011online,
+  title={Online 3d reconstruction using convex optimization},
+  author={Graber, Gottfried and Pock, Thomas and Bischof, Horst},
+  booktitle={Computer Vision Workshops (ICCV Workshops), 2011 IEEE International Conference on},
+  pages={708--711},
+  year={2011},
+  organization={IEEE}
+}
+
+@inproceedings{newcombe2011dtam,
+  title={DTAM: Dense tracking and mapping in real-time},
+  author={Newcombe, Richard A and Lovegrove, Steven J and Davison, Andrew J},
+  booktitle={Computer Vision (ICCV), 2011 IEEE International Conference on},
+  pages={2320--2327},
+  year={2011},
+  organization={IEEE}
+}
+
+@inproceedings{civera2011towards,
+  title={Towards semantic SLAM using a monocular camera},
+  author={Civera, Javier and G{\'a}lvez-L{\'o}pez, Dorian and Riazuelo, Luis and Tard{\'o}s, Juan D and Montiel, JMM},
+  booktitle={Intelligent Robots and Systems (IROS), 2011 IEEE/RSJ International Conference on},
+  pages={1277--1284},
+  year={2011},
+  organization={IEEE}
+}
+
+@inproceedings{salas2013slam++,
+  title={Slam++: Simultaneous localisation and mapping at the level of objects},
+  author={Salas-Moreno, Renato F and Newcombe, Richard A and Strasdat, Hauke and Kelly, Paul HJ and Davison, Andrew J},
+  booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
+  pages={1352--1359},
+  year={2013}
+}
+
+@inproceedings{hedau2009recovering,
+  title={Recovering the spatial layout of cluttered rooms},
+  author={Hedau, Varsha and Hoiem, Derek and Forsyth, David},
+  booktitle={Computer vision, 2009 IEEE 12th international conference on},
+  pages={1849--1856},
+  year={2009},
+  organization={IEEE}
+}
+
+@inproceedings{flint2011manhattan,
+  title={Manhattan scene understanding using monocular, stereo, and 3d features},
+  author={Flint, Alex and Murray, David and Reid, Ian},
+  booktitle={Computer Vision (ICCV), 2011 IEEE International Conference on},
+  pages={2228--2235},
+  year={2011},
+  organization={IEEE}
+}
+
+@inproceedings{yingze2013dense,
+  title={Dense object reconstruction with semantic priors},
+  author={Yingze Bao, Sid and Chandraker, Manmohan and Lin, Yuanqing and Savarese, Silvio},
+  booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
+  pages={1264--1271},
+  year={2013}
+}
+
+@inproceedings{vineet2015incremental,
+  title={Incremental dense semantic stereo fusion for large-scale semantic scene reconstruction},
+  author={Vineet, Vibhav and Miksik, Ondrej and Lidegaard, Morten and Nie{\ss}ner, Matthias and Golodetz, Stuart and Prisacariu, Victor A and K{\"a}hler, Olaf and Murray, David W and Izadi, Shahram and P{\'e}rez, Patrick and others},
+  booktitle={Robotics and Automation (ICRA), 2015 IEEE International Conference on},
+  pages={75--82},
+  year={2015},
+  organization={IEEE}
+}
+
+@inproceedings{geiger2010efficient,
+  title={Efficient large-scale stereo matching},
+  author={Geiger, Andreas and Roser, Martin and Urtasun, Raquel},
+  booktitle={Asian conference on computer vision},
+  pages={25--38},
+  year={2010},
+  organization={Springer}
+}
+
+@inproceedings{seitz2006comparison,
+  title={A comparison and evaluation of multi-view stereo reconstruction algorithms},
+  author={Seitz, Steven M and Curless, Brian and Diebel, James and Scharstein, Daniel and Szeliski, Richard},
+  booktitle={Computer vision and pattern recognition, 2006 IEEE Computer Society Conference on},
+  volume={1},
+  pages={519--528},
+  year={2006},
+  organization={IEEE}
+}
+
+@inproceedings{kim2005gaussian,
+  title={Gaussian scale-space dense disparity estimation with anisotropic disparity-field diffusion},
+  author={Kim, Jangheon and Sikora, Thomas},
+  booktitle={3-D Digital Imaging and Modeling, 2005. 3DIM 2005. Fifth International Conference on},
+  pages={556--563},
+  year={2005},
+  organization={IEEE}
+}
+
+@inproceedings{strecha2002pde,
+  title={PDE-based multi-view depth estimation},
+  author={Strecha, Christoph and Van Gool, Luc},
+  booktitle={3D Data Processing Visualization and Transmission, 2002. Proceedings. First International Symposium on},
+  pages={416--425},
+  year={2002},
+  organization={IEEE}
+}
+
+@inproceedings{koch1998multi,
+  title={Multi viewpoint stereo from uncalibrated video sequences},
+  author={Koch, Reinhard and Pollefeys, Marc and Van Gool, Luc},
+  booktitle={European conference on computer vision},
+  pages={55--71},
+  year={1998},
+  organization={Springer}
+}
+
+@article{pollefeys2004visual,
+  title={Visual modeling with a hand-held camera},
+  author={Pollefeys, Marc and Van Gool, Luc and Vergauwen, Maarten and Verbiest, Frank and Cornelis, Kurt and Tops, Jan and Koch, Reinhard},
+  journal={International Journal of Computer Vision},
+  volume={59},
+  number={3},
+  pages={207--232},
+  year={2004},
+  publisher={Springer}
+}
+
