--- a/camara.lyx
+++ b/camara.lyx
@@ -1,5 +1,5 @@
-#LyX 2.1 created this file. For more info see http://www.lyx.org/
-\lyxformat 474
+#LyX 2.0 created this file. For more info see http://www.lyx.org/
+\lyxformat 413
 \begin_document
 \begin_header
 \textclass book
@@ -24,13 +24,13 @@ figs-within-sections
 \font_roman default
 \font_sans default
 \font_typewriter default
-\font_math auto
 \font_default_family default
 \use_non_tex_fonts false
 \font_sc false
 \font_osf false
 \font_sf_scale 100
 \font_tt_scale 100
+
 \graphics pdftex
 \default_output_format default
 \output_sync 0
@@ -41,24 +41,15 @@ figs-within-sections
 \use_hyperref false
 \papersize a4paper
 \use_geometry false
-\use_package amsmath 1
-\use_package amssymb 1
-\use_package cancel 1
-\use_package esint 1
-\use_package mathdots 1
-\use_package mathtools 1
-\use_package mhchem 1
-\use_package stackrel 1
-\use_package stmaryrd 1
-\use_package undertilde 1
+\use_amsmath 1
+\use_esint 1
+\use_mhchem 1
+\use_mathdots 1
 \cite_engine basic
-\cite_engine_type default
-\biblio_style plain
 \use_bibtopic false
 \use_indices false
 \paperorientation portrait
 \suppress_date false
-\justification true
 \use_refstyle 1
 \index Index
 \shortcut idx
@@ -83,27 +74,6 @@ figs-within-sections
 
 \begin_layout Chapter
 Cámaras como sensores
-\end_layout
-
-\begin_layout Standard
-\begin_inset Note Note
-status open
-
-\begin_layout Plain Layout
-Métodos odométricos basados en encoders consideran que un movimiento en
- el motor se relaciona, bajo un modelo de movimiento, con un determinado
- desplazamiento en el espacio.
- Sin embargo esto podría no ser así dado que, por ejemplo, al utilizar la
- rotación de las ruedas para estimar el desplazamiento en robots terrestres
- no es posible distinguir situaciones donde superficies resbaladizas podrían
- generar un deslizamiento tal que el robot se mantuviera en el mismo sitio
- aún cuando las ruedas giren.
- 
-\end_layout
-
-\end_inset
-
-
 \end_layout
 
 \begin_layout Standard
@@ -133,56 +103,11 @@ robot vision
 \end_layout
 
 \begin_layout Standard
-La utilización de cámaras en métodos de localización relativa (
-\emph on
-visual odometry
-\emph default
-) 
-\begin_inset CommandInset citation
-LatexCommand cite
-key "VODOMETRY"
-
-\end_inset
-
- permiten percibir el movimiento del robot en los 6 grados de libertad posibles
- (3 de traslación y 3 de rotación) utilizando como referencia el entorno
- que lo rodea de manera independiente al accionar de sus actuadores, lo
- cual le permite superar el escenario que se presenta en la odometría basada
- en 
-\emph on
-encoders
-\emph default
- donde las ruedas pueden patinar invalidando la estimación de la pose.
- El modelo de sensado en el caso de las cámaras consiste básicamente en
- un mapeo entre el entorno tridimencional y el plano de la imagen bidimensional.
+El modelo de sensado en el caso de las cámaras consiste básicamente en un
+ mapeo entre el entorno tridimencional y el plano de la imagen bidimensional.
  Dependiendo el tipo de cámara (monocular, estéreo, omnidireccional, etc.)
  es posible utilizar diferentes modelos matemáticos que permitan relacionar
  puntos del mundo con su respectiva representación en la imagen.
- 
-\begin_inset Note Note
-status open
-
-\begin_layout Plain Layout
-En conjunto con métodos de detección y descripción de características visuales
- (
-\emph on
-keypoints
-\emph default
- o 
-\emph on
-features
-\emph default
-) es posible realizar el seguimiento de las mismas en sucesivos cuadros
- (
-\emph on
-frames
-\emph default
-) provistos por la cámara.
-\end_layout
-
-\end_inset
-
-
 \end_layout
 
 \begin_layout Standard
@@ -197,7 +122,7 @@ key "hartley2003multiple"
  junto con resultados geométricos de interés.
 \end_layout
 
-\begin_layout Subsection
+\begin_layout Section
 Modelo y geometría de una cámara monocular
 \end_layout
 
@@ -267,7 +192,7 @@ status open
 \end_inset
 
 
-\begin_inset Caption Standard
+\begin_inset Caption
 
 \begin_layout Plain Layout
 Modelo geométrico 
@@ -465,7 +390,7 @@ ESTABLECER A QUE SE LLAMA POSE DE LA CAMARA!
 
 \end_layout
 
-\begin_layout Subsection
+\begin_layout Section
 \begin_inset CommandInset label
 LatexCommand label
 name "sub:modelo_estereo"
@@ -513,7 +438,7 @@ status open
 \end_inset
 
 
-\begin_inset Caption Standard
+\begin_inset Caption
 
 \begin_layout Plain Layout
 La línea base interseca con cada plano imagen en los epipolos 
@@ -551,7 +476,7 @@ La línea base interseca con cada plano imagen en los epipolos
 
 \end_layout
 
-\begin_layout Subsubsection
+\begin_layout Subsection
 \begin_inset CommandInset label
 LatexCommand label
 name "sub:correspondencia_estereo"
@@ -807,7 +732,7 @@ status open
 \end_layout
 
 \begin_layout Plain Layout
-\begin_inset Caption Standard
+\begin_inset Caption
 
 \begin_layout Plain Layout
 (a) Los centros de cámara, el punto 3D 
@@ -884,322 +809,7 @@ name "fig:epipolar_lines"
 
 \end_layout
 
-\begin_layout Subsubsection
-La matriz fundamental
-\end_layout
-
-\begin_layout Standard
-La matriz fundamental 
-\begin_inset Formula $\boldsymbol{F}$
-\end_inset
-
- es una representación matricial de la geometría epipolar que permite realizar
- un mapeo entre puntos de un plano imagen a sus correspondientes líneas
- epipolares.
- Dadas un par de cámaras, se mencionó anteriormente que para cada punto
- 
-\begin_inset Formula $x$
-\end_inset
-
- perteneciente a uno de los planos imagen, existe una determinada línea
- epipolar 
-\begin_inset Formula $l'$
-\end_inset
-
- presente en el plano imagen opuesto donde debe encontrarse el punto imagen
- 
-\begin_inset Formula $x'$
-\end_inset
-
- correspondiente (Fig.(a) 
-\begin_inset CommandInset ref
-LatexCommand ref
-reference "fig:epipolar_lines"
-
-\end_inset
-
-).
- Por lo tanto, se requiere que la matriz fundamental 
-\begin_inset Formula $\boldsymbol{F}$
-\end_inset
-
- satisfaga:
-\end_layout
-
-\begin_layout Standard
-\begin_inset Formula 
-\begin{equation}
-\boldsymbol{F}x=l'
-\end{equation}
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
-Representando las líneas del plano imagen en coordenadas homogéneas: 
-\begin_inset Formula $l=(l_{1},l_{2},l_{3})^{\top}$
-\end_inset
-
-tal que 
-\begin_inset Formula $l_{1}\mathit{x}+l_{2}\mathit{y}+l_{3}=0$
-\end_inset
-
- y dado que el punto 
-\begin_inset Formula $x'$
-\end_inset
-
- pertenece a la línea 
-\begin_inset Formula $l'$
-\end_inset
-
-, por propiedades del espacio proyectivo se cumple que:
-\end_layout
-
-\begin_layout Standard
-\begin_inset Formula 
-\begin{equation}
-(x')^{\top}l'=0
-\end{equation}
-
-\end_inset
-
-de lo cual se obtiene:
-\end_layout
-
-\begin_layout Standard
-\begin_inset Formula 
-\begin{equation}
-(x')^{\top}\boldsymbol{F}x=0
-\end{equation}
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
-De esta forma se condiciona la relación entre los puntos imagen de ambas
- cámaras utilizando la matriz fundamental.
- Existen distintas interpretaciones geométricas para la matriz 
-\begin_inset Formula $\boldsymbol{F}$
-\end_inset
-
- y es posible derivarla de varias maneras.
- En la práctica calcularla permite la implementación de eficientes métodos
- de rectificación de imágenes, asociación de características visuales y
- triangulación de puntos del ambiente, como detallaremos a continuación.
-\end_layout
-
-\begin_layout Standard
-\begin_inset Note Note
-status collapsed
-
-\begin_layout Plain Layout
-TRATE DE BUSCAR UNA MANERA REDUCIDA DE DEFINIRLA FORMALMENTE, PERO ME CUESTA
- HACERLO BIEN Y COMPACTO.
-\end_layout
-
-\begin_layout Plain Layout
-Dadas un par de cámaras de centros 
-\begin_inset Formula $\boldsymbol{C}$
-\end_inset
-
- y 
-\begin_inset Formula $\boldsymbol{C}'$
-\end_inset
-
- se ha visto que para cada punto 
-\begin_inset Formula $x$
-\end_inset
-
- perteneciente a uno de los planos imagen, existe una determinada línea
- epipolar 
-\begin_inset Formula $l'$
-\end_inset
-
- presente en el plano imagen opuesto donde debe encontrarse el punto imagen
- 
-\begin_inset Formula $x'$
-\end_inset
-
- correspondiente.
- La línea 
-\begin_inset Formula $l'$
-\end_inset
-
- puede interpretarse como la proyección de la recta formada por 
-\begin_inset Formula $\boldsymbol{C}$
-\end_inset
-
- y 
-\begin_inset Formula $x$
-\end_inset
-
-, en el plano imagen de la segunda cámara 
-\begin_inset Formula $C'$
-\end_inset
-
- (Fig.
- [FIGURAQUESEVEA]).
- Esta proyección puede representarse como un vector homogéneo de dimensión
- 3: 
-\begin_inset Formula $l'=(l_{1},l_{2},l_{3})^{\top}$
-\end_inset
-
-tal que 
-\begin_inset Formula $l_{1}\mathit{x}+l_{2}\mathit{y}+l_{3}=0$
-\end_inset
-
-, y de esta manera es posible definirla como el producto vectorial entre
- dos puntos.
- Con esto en mente se busca definir a 
-\begin_inset Formula $\boldsymbol{F}$
-\end_inset
-
- en términos del producto vectorial entre puntos pertenecientes al plano
- imagen de la segunda cámara.
- Siendo conocidas 
-\begin_inset Formula $P$
-\end_inset
-
- y 
-\begin_inset Formula $P'$
-\end_inset
-
- las matrices de proyección de las respectivas cámaras, es posible definir
- el punto epipolar en el plano imagen de la segunda cámara como 
-\begin_inset Formula $\boldsymbol{e'}=P'\boldsymbol{C}$
-\end_inset
-
- (proyección del centro de la primera cámara al plano imagen de la segunda).
- Y conociendo 
-\begin_inset Formula $x$
-\end_inset
-
- de manera que satisface 
-\begin_inset Formula $x=PX$
-\end_inset
-
-, se puede demostrar que 
-\begin_inset Formula $P^{+}x$
-\end_inset
-
- pertenece a la recta que une 
-\begin_inset Formula $\boldsymbol{C}$
-\end_inset
-
- con 
-\begin_inset Formula $x$
-\end_inset
-
- (con 
-\begin_inset Formula $P^{+}$
-\end_inset
-
- pseudoinversa de 
-\begin_inset Formula $P$
-\end_inset
-
-) [REFCONPAGINA].
- Y de esta manera, junto con 
-\begin_inset Formula $\boldsymbol{e'}=P'\boldsymbol{C}$
-\end_inset
-
-, se obtiene un segundo punto 
-\begin_inset Formula $P'P^{+}x$
-\end_inset
-
- perteneciente a la proyección de la recta formada por 
-\begin_inset Formula $\boldsymbol{C}$
-\end_inset
-
- y 
-\begin_inset Formula $x$
-\end_inset
-
- en el plano imagen de la segunda cámara.
- Permitiendo definir a 
-\begin_inset Formula $l'$
-\end_inset
-
- como el producto vectorial entre 
-\begin_inset Formula $\boldsymbol{e'}$
-\end_inset
-
- y 
-\begin_inset Formula $P'P^{+}x$
-\end_inset
-
- :
-\end_layout
-
-\begin_layout Plain Layout
-\begin_inset Formula 
-\begin{equation}
-l'=\boldsymbol{e'}\times(P'P^{+}x)=(P'\boldsymbol{C})\times(P'P^{+}x)
-\end{equation}
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Plain Layout
-Y a 
-\begin_inset Formula $\boldsymbol{F}$
-\end_inset
-
- de manera general:
-\end_layout
-
-\begin_layout Plain Layout
-\begin_inset Formula 
-\begin{equation}
-\boldsymbol{F}=(P'\boldsymbol{C})\times(P'P^{+})=(\boldsymbol{e'})\times(P'P^{+})=[\boldsymbol{e'}]_{x}(P'P^{+})
-\end{equation}
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Plain Layout
-donde 
-\begin_inset Formula $[\cdot]_{x}$
-\end_inset
-
- es la representación matricial del producto vectorial (
-\emph on
-skew matrix
-\emph default
-).
- De forma que 
-\begin_inset Formula $\boldsymbol{F}x=l'$
-\end_inset
-
- y 
-\begin_inset Formula $x'\boldsymbol{F}x=x'l'=0$
-\end_inset
-
- (dado que 
-\begin_inset Formula $x'$
-\end_inset
-
- pertenece a la recta 
-\begin_inset Formula $l'$
-\end_inset
-
-).
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Subsubsection
+\begin_layout Subsection
 Rectificación estéreo
 \end_layout
 
@@ -1250,7 +860,7 @@ status open
 \end_layout
 
 \begin_layout Plain Layout
-\begin_inset Caption Standard
+\begin_inset Caption
 
 \begin_layout Plain Layout
 Par estéreo rectificado, notar que los planos imagen de las cámaras se encuentra
@@ -1283,7 +893,7 @@ ticas visuales, la cual permite estimar la profundidad (posición en el espacio)
 s.
 \end_layout
 
-\begin_layout Subsubsection
+\begin_layout Subsection
 \begin_inset CommandInset label
 LatexCommand label
 name "sub:triangulacion_estereo"
@@ -1365,7 +975,7 @@ status open
 \end_layout
 
 \begin_layout Plain Layout
-\begin_inset Caption Standard
+\begin_inset Caption
 
 \begin_layout Plain Layout
 Escenario de triangulación estéreo con cámaras rectificadas donde se desea
@@ -1459,375 +1069,6 @@ reference "eq:triangulation1"
  en la profundidad.
  La consecuencia de esto es que la reconstrucción 3D del ambiente utilizando
  cámaras estéreo es más precisa para puntos cercanos a la cámara.
-\end_layout
-
-\begin_layout Subsection
-Detección, descripción y asociación de características visuales
-\end_layout
-
-\begin_layout Standard
-Los procesos de detección y descripción de características visuales (
-\emph on
-features
-\emph default
-) corresponden a operaciones de bajo nivel en el procesado de imágenes.
- Tienen como finalidad detectar marcas naturales en el entorno (
-\emph on
-landmarks
-\emph default
-) y describirlas de manera de poder identificarlas en otras imágenes capturadas
- desde otros puntos de vista o posiciones de la cámara.
- De esta forma, se puede abstraer las imágenes sensadas a un conjunto de
- descriptores.
- Esta técnica de discretización de imágenes es conocida como registro de
- imágenes (
-\emph on
-image registration
-\emph default
-) y es ampliamente utilizada en visión por computadoras (
-\emph on
-computer vision
-\emph default
-) dado que permite sustraer características visuales de interés y reducir
- considerablemente la magnitud de los datos con los que tratar.
-\end_layout
-
-\begin_layout Standard
-Existen diversos tipos de detectores los cuales pueden dividirse en dos
- categorías dependiendo del tipo de características que busque en la imagen:
- detectores de esquinas (
-\emph on
-corner detectors
-\emph default
-) y detectores de regiones de interés (
-\emph on
-region of interest detectors
-\emph default
- o 
-\emph on
-blob detectors
-\emph default
-).
- Uno de los primeros detectores de esquinas fue planteado por Moravec 
-\begin_inset CommandInset citation
-LatexCommand cite
-key "MORAVEC"
-
-\end_inset
-
- el cual considera como puntos de interés aquellos que presentan una variación
- de intensidad considerable en toda dirección.
- Harris et al.
-\begin_inset CommandInset citation
-LatexCommand cite
-key "HARRIS"
-
-\end_inset
-
- resuelve algunas de las debilidades del detector de Moravec incluyendo
- un análisis numérico de autovalores sobre la denominada 
-\begin_inset Quotes eld
-\end_inset
-
-matriz de Harris
-\begin_inset Quotes erd
-\end_inset
-
-.
- Posteriormente Shi y Tomasi 
-\begin_inset CommandInset citation
-LatexCommand cite
-key "SHITOMASI"
-
-\end_inset
-
- extienden este análisis de autovalores introduciendo un criterio para evaluar
- la calidad de las esquinas detectadas en relación a la textura observada
- en un área cercana.
- Rosten et al.
-\begin_inset CommandInset citation
-LatexCommand cite
-key "FAST"
-
-\end_inset
-
- nombra a su método FAST, el cual utiliza técnicas de aprendizaje automático
- (
-\emph on
-machine learning
-\emph default
-) para aumentar la velocidad en la detección de esquinas.
- Lowe 
-\begin_inset CommandInset citation
-LatexCommand cite
-key "SIFT"
-
-\end_inset
-
- introduce SIFT (
-\emph on
-Scale Invariant Feature Transform
-\emph default
-), donde propone utilizar un detector de regiones basado en el filtro de
- diferencias gaussianas (Difference of Gaussians filter), un método computaciona
-lmente demandante pero capaz de extraer características visuales invariantes
- a cambios tanto de escala como de rotación e iluminación.
- El método propuesto por Bay et al.
-\begin_inset CommandInset citation
-LatexCommand cite
-key "SURF"
-
-\end_inset
-
-, SURF (
-\emph on
-Speeded Up Robust Features
-\emph default
-), inspirado en SIFT logra reducir el costo computacional a partir de utilizar
- imágenes integrales, manteniendo la calidad de detección y extracción de
- características invariantes a rotación y escala.
-\end_layout
-
-\begin_layout Standard
-Asimismo, una gran variedad de métodos capaces de describir puntos y regiones
- fueron concebidos conforme el interés en la visión por computadoras fue
- creciendo.
- Una característica determinante de los métodos de descripción (o descriptores)
- es que deben estar acompañados por técnicas efectivas que permitan comparar
- las características visuales descriptas, de manera de poder identificar
- y asociar aquellas que estén presentes en distintos cuadros (
-\emph on
-frames
-\emph default
-).
- Por lo general la descripción, comparación y asociación de características
- es uno de los procesos más demandantes en términos de costo computacional.
- Métodos como SIFT y SURF permiten extraer características visuales de gran
- calidad, pero su extracción y comparación es muy costosa y se requieren
- implementaciones especificas que exploten el poder de computo de aceleradoras
- gráficas (GPU) para satisfacer las necesidades de velocidad en sistemas
- de Visual SLAM.
- Esto se debe en medida a que las descripciones que generan son complejas
- y están basadas en vectores multidimensionales de valores de punto flotante.
-\end_layout
-
-\begin_layout Standard
-Con el objetivo de acelerar la comparación y asociación de descriptores,
- investigaciones recientes se han centrado en un tipo de descriptores llamados
- binarios.
- Estos tienen la particularidad de representar características visuales
- como cadenas de 
-\emph on
-bits
-\emph default
-, las cuales son comparable a través de rápidas operaciones binarias como
- por ejemplo la distancia Hamming.
- Calonder et al.
-\begin_inset CommandInset citation
-LatexCommand cite
-key "BRIEF"
-
-\end_inset
-
- propone un veloz descriptor binario denominado BRIEF, el cual describe
- características en una única cadena de 
-\emph on
-bits
-\emph default
-.
- Para esto utiliza las diferencias de intensidad entre pares de píxeles
- dentro de un área rectangular alrededor del punto de interés, utilizando
- un patrón previamente computado para la selección de los pares.
- Si bien la descripción de BRIEF es considerablemente veloz comparada a
- SIFT y SURF, este descriptor es sensible a cambios de escala y rotación,
- dado que genera descripciones muy disimiles de un mismo punto cuando este
- es rotado o escalado (por ejemplo, aumentando el zoom de la cámara).
- 
-\begin_inset Note Note
-status collapsed
-
-\begin_layout Plain Layout
-Es congruente hacer las referencias de ORB y BRISK sin el --- et al.??
-\end_layout
-
-\end_inset
-
-Inspirados por BRIEF, han surgido descriptores binarios invariantes a escala
- y rotación, como ORB 
-\begin_inset CommandInset citation
-LatexCommand cite
-key "ORB"
-
-\end_inset
-
- y BRISK 
-\begin_inset CommandInset citation
-LatexCommand cite
-key "BRISK"
-
-\end_inset
-
-, capaces de igualar y hasta superar en algunos casos la calidad de las
- características visuales extraídas por métodos más demandantes como SIFT
- o SURF.
- En las Figuras 
-\begin_inset CommandInset ref
-LatexCommand ref
-reference "fig:shi_tomasi"
-
-\end_inset
-
-, 
-\begin_inset CommandInset ref
-LatexCommand ref
-reference "fig:ejemplo_surf"
-
-\end_inset
-
- y 
-\begin_inset CommandInset ref
-LatexCommand ref
-reference "fig:ejemplo_orb"
-
-\end_inset
-
- se pueden observar algunos ejemplos de detección y asociación de característica
-s visuales en imágenes.
-\end_layout
-
-\begin_layout Standard
-\begin_inset Float figure
-wide false
-sideways false
-status open
-
-\begin_layout Plain Layout
-\begin_inset Box Frameless
-position "c"
-hor_pos "c"
-has_inner_box 1
-inner_pos "c"
-use_parbox 0
-use_makebox 0
-width "45text%"
-special "none"
-height "1in"
-height_special "totalheight"
-status open
-
-\begin_layout Plain Layout
-\align center
-\begin_inset Graphics
-	filename imagenes/shitomasi_features.jpg
-	lyxscale 50
-	width 75text%
-
-\end_inset
-
-
-\begin_inset Caption Standard
-
-\begin_layout Plain Layout
-Método de detección de esquinas Shi-Tomasi.
-\begin_inset CommandInset label
-LatexCommand label
-name "fig:shi_tomasi"
-
-\end_inset
-
-
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\end_inset
-
-
-\begin_inset space \hfill{}
-\end_inset
-
-
-\begin_inset Box Frameless
-position "c"
-hor_pos "c"
-has_inner_box 1
-inner_pos "c"
-use_parbox 0
-use_makebox 0
-width "45text%"
-special "none"
-height "1in"
-height_special "totalheight"
-status open
-
-\begin_layout Plain Layout
-\align center
-\begin_inset Graphics
-	filename imagenes/surf_features.jpg
-	lyxscale 50
-	width 95text%
-
-\end_inset
-
-
-\begin_inset Caption Standard
-
-\begin_layout Plain Layout
-Regiones de interés detectadas por el método SURF.
-\begin_inset CommandInset label
-LatexCommand label
-name "fig:ejemplo_surf"
-
-\end_inset
-
-
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Plain Layout
-\align center
-\begin_inset Graphics
-	filename imagenes/orb_features.jpg
-	lyxscale 50
-	width 100text%
-
-\end_inset
-
-
-\begin_inset Caption Standard
-
-\begin_layout Plain Layout
-Asociación de características extraídas por el método ORB.
- Notar la robustez del método ante la rotación de la imagen.
-\begin_inset CommandInset label
-LatexCommand label
-name "fig:ejemplo_orb"
-
-\end_inset
-
-
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\end_inset
-
-
 \end_layout
 
 \end_body
