Update to Lyx 2.2 format
Signed-off-by: Ariel D'Alessandro <ariel@vanguardiasur.com.ar>

--- a/camara.lyx
+++ b/camara.lyx
@@ -1,7 +1,9 @@
-#LyX 2.0 created this file. For more info see http://www.lyx.org/
-\lyxformat 413
+#LyX 2.2 created this file. For more info see http://www.lyx.org/
+\lyxformat 508
 \begin_document
 \begin_header
+\save_transient_properties true
+\origin unavailable
 \textclass book
 \begin_preamble
 \usepackage[utf8]{inputenc}
@@ -21,16 +23,16 @@ figs-within-sections
 \language_package default
 \inputencoding utf8
 \fontencoding global
-\font_roman default
-\font_sans default
-\font_typewriter default
+\font_roman "default" "default"
+\font_sans "default" "default"
+\font_typewriter "default" "default"
+\font_math "auto" "auto"
 \font_default_family default
 \use_non_tex_fonts false
 \font_sc false
 \font_osf false
-\font_sf_scale 100
-\font_tt_scale 100
-
+\font_sf_scale 100 100
+\font_tt_scale 100 100
 \graphics pdftex
 \default_output_format default
 \output_sync 0
@@ -41,15 +43,24 @@ figs-within-sections
 \use_hyperref false
 \papersize a4paper
 \use_geometry false
-\use_amsmath 1
-\use_esint 1
-\use_mhchem 1
-\use_mathdots 1
+\use_package amsmath 1
+\use_package amssymb 1
+\use_package cancel 1
+\use_package esint 1
+\use_package mathdots 1
+\use_package mathtools 1
+\use_package mhchem 1
+\use_package stackrel 1
+\use_package stmaryrd 1
+\use_package undertilde 1
 \cite_engine basic
+\cite_engine_type default
+\biblio_style plain
 \use_bibtopic false
 \use_indices false
 \paperorientation portrait
 \suppress_date false
+\justification true
 \use_refstyle 1
 \index Index
 \shortcut idx
@@ -192,7 +203,7 @@ status open
 \end_inset
 
 
-\begin_inset Caption
+\begin_inset Caption Standard
 
 \begin_layout Plain Layout
 Modelo geométrico 
@@ -393,7 +404,7 @@ ESTABLECER A QUE SE LLAMA POSE DE LA CAMARA!
 \begin_layout Section
 \begin_inset CommandInset label
 LatexCommand label
-name "sub:modelo_estereo"
+name "subsec:modelo_estereo"
 
 \end_inset
 
@@ -438,7 +449,7 @@ status open
 \end_inset
 
 
-\begin_inset Caption
+\begin_inset Caption Standard
 
 \begin_layout Plain Layout
 La línea base interseca con cada plano imagen en los epipolos 
@@ -479,7 +490,7 @@ La línea base interseca con cada plano imagen en los epipolos
 \begin_layout Subsection
 \begin_inset CommandInset label
 LatexCommand label
-name "sub:correspondencia_estereo"
+name "subsec:correspondencia_estereo"
 
 \end_inset
 
@@ -670,6 +681,11 @@ width "49text%"
 special "none"
 height "1in"
 height_special "totalheight"
+thickness "0.4pt"
+separation "3pt"
+shadowsize "4pt"
+framecolor "black"
+backgroundcolor "none"
 status open
 
 \begin_layout Plain Layout
@@ -707,6 +723,11 @@ width "49col%"
 special "none"
 height "1in"
 height_special "totalheight"
+thickness "0.4pt"
+separation "3pt"
+shadowsize "4pt"
+framecolor "black"
+backgroundcolor "none"
 status open
 
 \begin_layout Plain Layout
@@ -732,7 +753,7 @@ status open
 \end_layout
 
 \begin_layout Plain Layout
-\begin_inset Caption
+\begin_inset Caption Standard
 
 \begin_layout Plain Layout
 (a) Los centros de cámara, el punto 3D 
@@ -818,7 +839,7 @@ La rectificación estéreo proyecta las imágenes obtenidas por las cámaras
  a un plano imagen en común, de manera que puntos correspondientes (
 \begin_inset CommandInset ref
 LatexCommand ref
-reference "sub:correspondencia_estereo"
+reference "subsec:correspondencia_estereo"
 
 \end_inset
 
@@ -860,7 +881,7 @@ status open
 \end_layout
 
 \begin_layout Plain Layout
-\begin_inset Caption
+\begin_inset Caption Standard
 
 \begin_layout Plain Layout
 Par estéreo rectificado, notar que los planos imagen de las cámaras se encuentra
@@ -896,7 +917,7 @@ s.
 \begin_layout Subsection
 \begin_inset CommandInset label
 LatexCommand label
-name "sub:triangulacion_estereo"
+name "subsec:triangulacion_estereo"
 
 \end_inset
 
@@ -975,7 +996,7 @@ status open
 \end_layout
 
 \begin_layout Plain Layout
-\begin_inset Caption
+\begin_inset Caption Standard
 
 \begin_layout Plain Layout
 Escenario de triangulación estéreo con cámaras rectificadas donde se desea
