--- a/solucion.lyx
+++ b/solucion.lyx
@@ -1,7 +1,9 @@
-#LyX 2.0 created this file. For more info see http://www.lyx.org/
-\lyxformat 413
+#LyX 2.2 created this file. For more info see http://www.lyx.org/
+\lyxformat 508
 \begin_document
 \begin_header
+\save_transient_properties true
+\origin unavailable
 \textclass book
 \begin_preamble
 \usepackage[utf8]{inputenc}
@@ -28,16 +30,16 @@ figs-within-sections
 \language_package default
 \inputencoding utf8
 \fontencoding global
-\font_roman default
-\font_sans default
-\font_typewriter default
+\font_roman "default" "default"
+\font_sans "default" "default"
+\font_typewriter "default" "default"
+\font_math "auto" "auto"
 \font_default_family default
 \use_non_tex_fonts false
 \font_sc false
 \font_osf false
-\font_sf_scale 100
-\font_tt_scale 100
-
+\font_sf_scale 100 100
+\font_tt_scale 100 100
 \graphics pdftex
 \default_output_format default
 \output_sync 0
@@ -48,15 +50,24 @@ figs-within-sections
 \use_hyperref false
 \papersize a4paper
 \use_geometry false
-\use_amsmath 1
-\use_esint 1
-\use_mhchem 1
-\use_mathdots 1
+\use_package amsmath 1
+\use_package amssymb 1
+\use_package cancel 1
+\use_package esint 1
+\use_package mathdots 1
+\use_package mathtools 1
+\use_package mhchem 1
+\use_package stackrel 1
+\use_package stmaryrd 1
+\use_package undertilde 1
 \cite_engine basic
+\cite_engine_type default
+\biblio_style plain
 \use_bibtopic false
 \use_indices false
 \paperorientation portrait
 \suppress_date false
+\justification true
 \use_refstyle 1
 \index Index
 \shortcut idx
@@ -123,7 +134,7 @@ textwidth]{imagenes/sptam_diagram.tikz}
 \end_layout
 
 \begin_layout Plain Layout
-\begin_inset Caption
+\begin_inset Caption Standard
 
 \begin_layout Plain Layout
 Esquema general de los diferentes componentes de S-PTAM
@@ -273,7 +284,7 @@ textwidth]{imagenes/sptam_dense_diagram.tikz}
 \end_inset
 
 
-\begin_inset Caption
+\begin_inset Caption Standard
 
 \begin_layout Plain Layout
 Esquema general del sistema de densificación de mapas en tiempo real, procesando
@@ -405,7 +416,7 @@ includegraphics[width=10cm]{imagenes/disparity/stereobm_merge_kitti04_27.jpg}
 \end_inset
 
 
-\begin_inset Caption
+\begin_inset Caption Standard
 
 \begin_layout Plain Layout
 Arriba: Mapa de disparidad calculado mediante OpenCV StereoBM.
@@ -452,7 +463,7 @@ includegraphics[width=10cm]{imagenes/disparity/stereobm_merge_tsukuba_221.jpg}
 \end_inset
 
 
-\begin_inset Caption
+\begin_inset Caption Standard
 
 \begin_layout Plain Layout
 Arriba: Mapa de disparidad calculado mediante OpenCV StereoBM.
@@ -540,7 +551,7 @@ includegraphics[width=10cm]{imagenes/disparity/libelas_merge_kitti04_22.jpg}
 \end_inset
 
 
-\begin_inset Caption
+\begin_inset Caption Standard
 
 \begin_layout Plain Layout
 Arriba: Mapa de disparidad calculado mediante LibELAS.
@@ -587,7 +598,7 @@ includegraphics[width=10cm]{imagenes/disparity/libelas_merge_tsukuba_222.jpg}
 \end_inset
 
 
-\begin_inset Caption
+\begin_inset Caption Standard
 
 \begin_layout Plain Layout
 Arriba: Mapa de disparidad calculado mediante LibELAS.
@@ -756,7 +767,7 @@ includegraphics[width=8cm]{imagenes/frustum_of_view.jpg}
 \end_inset
 
 
-\begin_inset Caption
+\begin_inset Caption Standard
 
 \begin_layout Plain Layout
 Representación de la pirámide trunca 
